GNU nano 2.2.5 - 2010.08.05
2010-08-04 Lauri Kasanen <curaga@operamail.comcuraga@operamail.com>
        * doc/syntax/mgp.nanorc: New Magicpoint syntax highlighting definition

2010-08-04 Peter <exodus@savannah>
	* doc/syntax/tex.nanorc: No longer highlight escaped comments

2010-06-20 Chris Allegretta <chrisa@asty.org>
	* New rc file option allow_insecure_backup, allows the previous security
	  fixes for backup files to be overridden if you're really positive
	  you want to.  Fixes Savannah bug 29732 by Brian Szymanski <skibrianski>.

2010-05-23 Chris Allegretta <chrisa@asty.org>
	* files.c (write_file): Don't even try to chown() the backup
	  file unless we're root, since it's probably going to fail if
	  we're editing a file we don't own.  Fixes Savannah bug
	  29514: [nano 2.2.2] backup should ignore chown errors.

GNU nano 2.2.4 - 2010.04.15
2010-04-07 Chris Allegretta <chrisa@asty.org>
	* doc/man/nano.1,nanorc.5: Remove the backup file warnings now
          that a sufficient security fix exists for the backup file code.

2010-04-14 Chris Allegretta <chrisa@asty.org>
	* text.c (do_alt_speller): Skip invoking the alt speller if the file size 
	  is 0 bytes.  Fixes Savannah bug 29393 reported by Mike Frysinger.
	* files.c (wirte_file): Don't set current_stat when tmp == TRUE, check
	  whether current_stat is set when trying to use it, and don't do the
	  modification check if the filename changed, since we have no way
	  of knowing about it in that case.  Fixes Savannah bug 29392, reported
	  by Mike Frysinger.  [CVE-2010-1160]

2010-04-13 Felipe Bugno <necron@bol.com.br>
	* doc/syntax/cmake.nanorc: Added cmake syntax highlighting file.

2010-04-09 Chris Allegretta <chrisa@asty.org>
	* files.c (do_writeout): Better security fixes for backup file writing, 
	  mangled from submission by Dan Rosenberg <dan.j.rosenberg at gmail> 
          [CVE-2010-1161]

2010-04-08 Chris Allegretta <chrisa@asty.org>