@@ -1,3 +1,9 @@
+2010-11-12 Chris Allegretta <chrisa@asty.org>
+	* Add check for RESTRICTED mode back to speller, suspend and insert file
+	  routines, since adding key bindings broke the fact that they should be
+	  disabled in restricted mode.  Fixes Savannah bug 31625 reported by
+	  Charlie Somerville.
+
 GNU nano 2.2.5 - 2010.08.05
 2010-08-04 Lauri Kasanen <curaga@operamail.comcuraga@operamail.com>
         * doc/syntax/mgp.nanorc: New Magicpoint syntax highlighting definition
